Update the recommendation system with attributes

--- a/edit_data/Movie Recommendation System Models.ipynb
+++ b/edit_data/Movie Recommendation System Models.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\e'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\e'\n",
-      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_15560\\81423635.py:1: SyntaxWarning: invalid escape sequence '\\e'\n",
+      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_1132\\81423635.py:1: SyntaxWarning: invalid escape sequence '\\e'\n",
       "  movies_df = pd.read_csv('..\\edit_data\\Lee\\cleaned_data\\movies_main.csv')\n"
      ]
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "[2 rows x 28 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,23 +254,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_15560\\3612850336.py:66: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  filtered_movies['match_percentage'] = filtered_movies.apply(lambda row: calculate_match_percentage(row, genre, release_year, keywords), axis=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import tkinter as tk\n",
+    "from tkinter import ttk\n",
+    "import pandas as pd\n",
+    "import ast\n",
+    "\n",
+    "# Assuming movies_df is your DataFrame\n",
+    "\n",
     "# Extract unique genres from the dataset\n",
     "def extract_genres(genre_str):\n",
     "    try:\n",
@@ -315,7 +309,7 @@
     "    if release_year and release_year != \"Any\":\n",
     "        if pd.notna(row['Release_Year']) and row['Release_Year'] == int(release_year):\n",
     "            match_score += 1\n",
-    "            \n",
+    "    \n",
     "    # Check keyword match\n",
     "    if keywords:\n",
     "        if pd.notna(row['Overview']) and keywords.lower() in row['Overview'].lower():\n",
@@ -338,13 +332,16 @@
     "    # Calculate match percentages\n",
     "    filtered_movies['match_percentage'] = filtered_movies.apply(lambda row: calculate_match_percentage(row, genre, release_year, keywords), axis=1)\n",
     "    \n",
-    "    # Sort by match percentage and limit to top 5\n",
-    "    filtered_movies = filtered_movies.sort_values(by='match_percentage', ascending=False)\n",
-    "    top_movies = filtered_movies.head(5)[['Original_Title', 'Vote_Average', 'match_percentage']]\n",
+    "    # Sort by popularity and then match percentage\n",
+    "    filtered_movies = filtered_movies.sort_values(by=['Popularity', 'match_percentage'], ascending=[False, False])\n",
+    "    \n",
+    "    # Limit to top 5 results\n",
+    "    top_movies = filtered_movies.head(5)[['Original_Title', 'Vote_Average', 'Release_Year', 'Original_Language', 'Popularity', 'match_percentage']]\n",
     "    \n",
     "    # Format the output with numbering, lines, and additional movie details\n",
     "    result = [\n",
     "        f\"{idx + 1}. {row['Original_Title']} - {row['match_percentage']:.2f}% match\\n\"\n",
+    "        f\"   Release Year: {int(row['Release_Year'])} | Language: {row['Original_Language']} | Popularity: {int(row['Popularity'])}\\n\"\n",
     "        f\"   Vote Average: {row['Vote_Average']}\\n----\"\n",
     "        for idx, (_, row) in enumerate(top_movies.iterrows())\n",
     "    ]\n",
@@ -407,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +457,10 @@
     "        \n",
     "        # Formatting the output\n",
     "        results = [\n",
-    "            f\"Title: {row['Original_Title']}\\nVote Average: {row['Vote_Average']}\\nPopularity: {row['Popularity']}\\n{'-' * 50}\" \n",
+    "            f\"Title: {row['Original_Title']}\\n\"\n",
+    "            f\"   Release Year: {int(row['Release_Year'])} | Language: {row['Original_Language']} | \"\n",
+    "            f\"Vote Average: {row['Vote_Average']} | Popularity: {int(row['Popularity'])}\\n\"\n",
+    "            f\"{'-' * 50}\" \n",
     "            for _, row in top_5_filtered_movies.iterrows()\n",
     "        ]\n",
     "        result_var.set(\"\\n\\n\".join(results))\n",
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,7 @@
     "    similarity_scores = 1 - similar_movies_distances\n",
     "    \n",
     "    # Select only the relevant columns without including the index or any ID\n",
-    "    similar_movies = data.iloc[similar_movies_indices][['Original_Title', 'Original_Language']]\n",
+    "    similar_movies = data.iloc[similar_movies_indices][['Original_Title', 'Original_Language', 'Vote_Average', 'Release_Year']]\n",
     "    similar_movies['Similarity_Score'] = similarity_scores\n",
     "    \n",
     "    return similar_movies.reset_index(drop=True)  # Reset the index to avoid showing any ID\n",
@@ -559,7 +559,6 @@
     "        super().__init__()\n",
     "\n",
     "        self.title(\"Movie Recommender\")\n",
-    "        self.geometry(\"800x600\")  # Window size\n",
     "\n",
     "        # Label and entry for the movie title\n",
     "        self.label = ttk.Label(self, text=\"Enter Movie Title:\")\n",
@@ -595,13 +594,23 @@
     "            tk.Label(self.results_frame, text=f\"Top 5 movies similar to '{movie_title}':\", font=('Arial', 14)).pack(pady=5)\n",
     "            \n",
     "            for idx, row in recommendations.iterrows():\n",
-    "                details = f\"{idx + 1}. {row['Original_Title']} ({row['Original_Language'].upper()}) - Similarity: {row['Similarity_Score']:.2f}\"\n",
+    "                # Display title on its own line\n",
+    "                title_label = tk.Label(self.results_frame, text=f\"{idx + 1}. {row['Original_Title']}\", font=('Arial', 12, 'bold'))\n",
+    "                title_label.pack(anchor='w', padx=10, pady=2)\n",
+    "                \n",
+    "                # Display details on a single line below the title\n",
+    "                details = (f\"   Release Year: {int(row['Release_Year'])} | Language: {row['Original_Language'].upper()} | \"\n",
+    "                           f\"Vote Average: {row['Vote_Average']} | Similarity: {row['Similarity_Score']:.2f}\")\n",
     "                details_label = tk.Label(self.results_frame, text=details, font=('Arial', 12))\n",
-    "                details_label.pack(anchor='w', padx=10, pady=5)\n",
+    "                details_label.pack(anchor='w', padx=10, pady=2)\n",
     "                \n",
     "                # Add a separator line for visual separation\n",
     "                separator = ttk.Separator(self.results_frame, orient='horizontal')\n",
     "                separator.pack(fill='x', padx=5, pady=5)\n",
+    "\n",
+    "        # Adjust the window size to fit the content\n",
+    "        self.update_idletasks()\n",
+    "        self.geometry(f\"{self.winfo_width()}x{self.results_frame.winfo_height() + 150}\")\n",
     "\n",
     "# Run the application\n",
     "if __name__ == \"__main__\":\n",
